# MCP-Gateway

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  docker-compose.yml  locustfile.py  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250413_0001_initial_schema.py  20260601_0002_audit_hash_chain.py  20260606_0003_users.py  20260606_0004_conversation_id.py
apps/api/scripts/: init_db.sql
apps/api/src/mcp_gateway/: __init__.py  config.py  database.py  main.py
apps/api/src/mcp_gateway/middleware/: auth.py
apps/api/src/mcp_gateway/models/: __init__.py  audit.py  registry.py  user.py  workflow.py
apps/api/src/mcp_gateway/routers/: audit.py  auth.py  health.py  registry.py  tools.py  workflows.py
apps/api/src/mcp_gateway/schemas/: audit.py  registry.py  tools.py  workflows.py
apps/api/src/mcp_gateway/services/: cache.py  health_scheduler.py  orchestrator.py  registry.py  security_gateway.py
apps/api/src/mcp_gateway/services/adapters/: __init__.py  base.py  credentials.py  gdrive.py  github.py  jira.py  kb.py  registry.py  slack.py
apps/api/tests/: conftest.py  test_adapters.py  test_health.py  test_registry.py  test_tools_router.py  test_workflows.py
apps/kb/: Dockerfile  main.py
apps/web/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useAuditLogs.ts  (+4 more)
opa/policies/: authz.rego
(+8 files in other folders)
